style<Launcher>: supports two size rules for tabs in titlebar - fixed width or size to content

--- a/src/Resources/Locales/en_US.axaml
+++ b/src/Resources/Locales/en_US.axaml
@@ -381,6 +381,7 @@
   <sys:String x:Key="Text.Preference.General.Theme">Theme</sys:String>
   <sys:String x:Key="Text.Preference.General.MaxHistoryCommits">History Commits</sys:String>
   <sys:String x:Key="Text.Preference.General.RestoreTabs">Restore windows</sys:String>
+  <sys:String x:Key="Text.Preference.General.UseFixedTabWidth">Use fixed tab width in titlebar</sys:String>
   <sys:String x:Key="Text.Preference.General.UseMacOSStyle">Use macOS style titlebar</sys:String>
   <sys:String x:Key="Text.Preference.Git">GIT</sys:String>
   <sys:String x:Key="Text.Preference.Git.Path">Install Path</sys:String>
