--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -447,25 +447,7 @@
           <Button Grid.Column="3" Classes="flat" FontWeight="Regular" Content="{DynamicResource Text.Repository.Abort}" Height="20" Padding="8,0" Margin="4,0" Command="{Binding AbortMerge}"/>
         </Grid>
 
-        <ContentControl Grid.Row="1" Content="{Binding SelectedView}">
-          <ContentControl.DataTemplates>
-            <DataTemplate DataType="vm:Histories">
-              <v:Histories/>
-            </DataTemplate>
-
-            <DataTemplate DataType="vm:WorkingCopy">
-              <v:WorkingCopy/>
-            </DataTemplate>
-
-            <DataTemplate DataType="vm:StashesPage">
-              <v:StashesPage/>
-            </DataTemplate>
-
-            <DataTemplate DataType="x:Double">
-              <Border/>
-            </DataTemplate>
-          </ContentControl.DataTemplates>
-        </ContentControl>
+        <v:RepositorySubView Grid.Row="1" Data="{Binding SelectedView}"/>
       </Grid>
     </Grid>
   </Grid>
