--- a/src/Views/TextDiffView.axaml
+++ b/src/Views/TextDiffView.axaml
@@ -7,7 +7,8 @@
              xmlns:v="using:SourceGit.Views"
              xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="SourceGit.Views.TextDiffView">
+             x:Class="SourceGit.Views.TextDiffView"
+             Background="{DynamicResource Brush.Contents}">
   <UserControl.DataTemplates>
     <DataTemplate DataType="m:TextDiff">
       <v:CombinedTextDiffPresenter HorizontalScrollBarVisibility="Auto"
